# ohmyoled

./: .gitignore  .gitmodules  Cargo.toml  Jenkinsfile  Makefile  Pipfile  README.md  \  builddocker.sh  install.sh  main.py  ohmyoled.spec  pip_install.sh  requirements.txt  setup.py  terminal.py  update.sh
.devcontainer/: Dockerfile  devcontainer.json  install.sh
.github/workflows/: main.yml
container/devcontainer_build/: Dockerfile
container/prodcontainer_build/: Dockerfile
deprecated_devcontainer/: Dockerfile  devcontainer.json
deprecated_devcontainer/container/: README.md
fonts/X11/: .uuid
fonts/XtraStuf.mac/: Icon
fonts/cMap/: .uuid
fonts/cmap/: .uuid
fonts/eot/: .uuid
fonts/opentype/: .uuid
fonts/svg/: .uuid
fonts/truetype/: .uuid
fonts/type1/: .uuid
fonts/woff/: .uuid
lib/: asynclib.py  binary_build.sh  deprecated_install.sh  dev_script.sh  run.py  stockquote.py  stocks.py  weather.py
lib/config/: ohmyoled.conf
lib/sports/: football.py  logo.py  sportbase.py  sports.py
lib/stock/: crypto.py  historical_stock.py  stockquote.py  stocks.py
lib/upgrade/: upgrade.py
lib/weather/: ecIcons_utf8.csv  normal.py  weather.py  weather_icon.py  weatherbase.py
matrix/: error.py  matrix.py  test.py  time.py  weathermatrix.py
matrix/sport/: sportmatrix.py  team_mapping.py
matrix/stock/: historicalstockmatrix.py  stockmatrix.py
ohmyoled.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
prodcontainer_build/: Dockerfile
src/: example_con.txt  filelib.rs  main.rs
src/createjson/: mod.rs  sport.rs  stock.rs  time.rs  traits.rs  (+1 more)
(+152 files in other folders)
