[package]
name = "ohmyoled"
version = "2.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json = "0.12.4"
clap = { version = "3.0.10", features = ["derive"] }
log = "0.4.14"
env_logger = "0.8.4"

[lib]
name = "oledlib"
path= "src/lib/lib.rs"